# ShakkaShell-

./: .gitignore  LICENSE  PRD.MD  README.md  ShakkaShell.py  power.md  progress.txt  pyproject.toml
docs/: README.md  agents.md  api.md  cli.md  configuration.md  exploit.md  honeypot.md  installation.md  mcp.md  memory.md  reports.md  safety.md  tools.md
shakka/: __init__.py  __main__.py  cli.py  config.py
shakka/agents/: __init__.py  base.py  message.py  orchestrator.py  roles.py
shakka/core/: __init__.py  cost_tracker.py  executor.py  generator.py  safety.py  validator.py
shakka/exploit/: __init__.py  cve.py  exploitdb.py  github.py  pipeline.py
shakka/honeypot/: __init__.py  detector.py  indicators.py  patterns.py
shakka/mcp/: __init__.py  server.py  tools.py  transport.py
shakka/planning/: __init__.py  models.py  planner.py
shakka/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py  openrouter.py
shakka/reports/: __init__.py  generator.py  models.py  templates.py
shakka/storage/: __init__.py  database.py  history.py  memory.py  (+1 more)
tests/: test_agents.py  test_cli.py  test_config.py  test_cost_tracker.py  test_display.py  test_documentation.py  test_executor.py  test_exploit.py  test_generator.py  test_honeypot.py  test_init.py  test_mcp.py  test_mcp_http.py  test_memory.py  test_planning.py  test_project_structure.py  test_providers_anthropic.py  test_providers_base.py  test_providers_ollama.py  test_providers_openai.py  test_reports.py  test_safety.py  test_storage.py  test_tools.py  test_validator.py
v2/: PRD.md  progress.txt
(+6 files in other folders)
